# astronify

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGES.rst  CITATION.cff  DEVELOPER_DOC.rst  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci_workflows.yml
astronify/: __init__.py  _astropy_init.py  conftest.py  series.py  utils.exceptions.py
astronify/example_subpkg/: setup_package.py
astronify/series/: __init__.py  series.py
astronify/series/tests/: __init__.py  test_series.py
astronify/simulator/: How_To_Use_The_Simulator.ipynb  __init__.py  add_flare_signal.py  add_lc_noise.py  add_sine_signal.py  add_transit_signal.py  check_flare_params.py  check_transit_params.py  example_cmds.sh  sim_lc.py  sim_lc_config.py  sim_lc_setup_args.py  test.fits
astronify/simulator/tests/: test_add_flare_signal.py  test_add_lc_noise.py  test_add_sine_signal.py  test_add_transit_signal.py  test_check_flare_params.py  test_check_transit_params.py  test_sim_lc_config.py
astronify/utils/: __init__.py  exceptions.py  pitch_mapping.py
astronify/utils/tests/: __init__.py  test_pitch_mapping.py
docs/: CreateWithLight.html  conf.py  contents.rst  home.html  index.html  index.rst  main.css  requirements.txt
docs/_static/: astronify.css  main.css
docs/_templates/: layout.html
docs/_themes/: layout.html
docs/astronify/: How_To_Use_The_Simulator.rst  Intro_Astronify_Series.rst  api.rst  index.rst  install.rst  tutorials.rst
docs/landing_page/: home.html  main.css
docs/notebooks/: BOSZ_Model_Spectra_Sonifications.ipynb  How_To_Use_The_Simulator.ipynb  Intro_Astronify_Series.ipynb  JWST_MIRI_Default_Sonification.ipynb  NIRISS_Sonification.ipynb  astronify-sync-audio-to-plot.ipynb
licenses/: LICENSE.rst
notebooks/: OBAFGKM_demo.ipynb  astronify-snapshots-hack.ipynb
