[metadata]
name = astronify
author = Clara Brasseur, Scott Fleming, Jennifer Kotler, Kate Meredith
author_email = cbrasseur@stsci.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/spacetelescope/astronify
description = Sonification of astronomical data.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = spacetelscope/astronify

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy, pyo, thinkdsp

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
astronify = data/*

[tool:pytest]
testpaths = "astronify" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    astronify/_astropy_init*
    astronify/conftest.py
    astronify/*setup_package*
    astronify/tests/*
    astronify/*/tests/*
    astronify/extern/*
    astronify/version*
    */astronify/_astropy_init*
    */astronify/conftest.py
    */astronify/*setup_package*
    */astronify/tests/*
    */astronify/*/tests/*
    */astronify/extern/*
    */astronify/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
